--- a/part0/ex04.md
+++ b/part0/ex04.md
@@ -1,9 +1,14 @@
 ```mermaid
 sequenceDiagram
-    participant browser
-    participant server
+	participant browser
+	participant server
 
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+	browser ->> server: POST https://fullstack-exampleapp.herokuapp.com/new_note
+	activate server
+	Note right of browser: The browser sends the new note to the server payload: { note: "new note"}
+	server -->> browser: HTML document
+
+	browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
     activate server
     server-->>browser: HTML document
     deactivate server
