Actualizar diagrama de secuencia para simplificar la descripción de la ejecución en el navegador

--- a/part0/ex06.md
+++ b/part0/ex06.md
@@ -10,6 +10,6 @@ sequenceDiagram
 	server -->> browser: { message: "note created" }
 	deactivate server
 
-	Note right of browser: The browser executes the callback function that renders the notes
+	Note right of browser: The browser executes renders the notes
 
 ```
